--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,11 @@ a {
     color:#666;
 }
 
+h2 {
+    margin-bottom:20px;
+    font-size:18px;
+}
+
 header {
     display:block;
     position:relative;
@@ -62,13 +67,13 @@ rnav a {
     margin-right:10px;
 }
 
-login {
+login,submitform {
     display:block;
     position:relative;
     width:150px;
 }
 
-login label {
+login label, submitform label {
     font-size:12px;
     font-weight:bold;
 }
@@ -78,4 +83,29 @@ div #errormsg {
     color:#ff9999;
     font-weight:bold;
     margin-top: 15px;
+}
+
+news {
+    font-size: 16px;
+}
+
+news h2 {
+    display: inline;
+}
+
+news address {
+    display: inline;
+    color: #999;
+}
+
+news a {
+    color: #3333ee;
+}
+
+news a:visited {
+    color: #9999aa;
+}
+
+news arrows {
+    font-size: 20px;
 }
