use PRE instead of P tag in the about text for user profile so that formatting is raw like in comments. This fixes issue #16

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,7 +214,7 @@ userinfo ul li {
     margin-bottom:10px;
 }
 
-userinfo p {
+userinfo pre {
     color: #666;
     font-style: italic;
     margin:20px;
