comment text was too big, now 14 px.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -191,6 +191,7 @@ comment pre {
     left:60px;
     top:10px;
     font-family: Courier;
+    font-size: 14px;
     white-space: pre-wrap;       /* css-3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
