Added style to page title h2:first-child

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,12 @@ a {
     color:#666;
 }
 
+h2:first-child {
+    font-weight:bold; 
+    border-bottom:1px solid #ccc; 
+    padding-bottom: 10px;
+}
+
 h2 {
     margin-bottom:20px;
     font-size:22px;
