--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; }
 
 body {
-    font-family: "Helvetica, “Helvetica Neue”, Arial, sans-serif";
+    font-family: Helvetica;
     text-rendering: optimizeLegibility;
 }
 
@@ -31,7 +31,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    height: 50px;
+    height: 30px;
     width:100%;
 }
 
@@ -78,8 +78,8 @@ nav a {
 rnav {
     color:#aaa;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     font-weight:bold;
     font-size:14px;
 }
