--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,7 +157,7 @@ form textarea {
     font-size:14px;
 }
 
-comment {
+.comment {
     position:relative;
     width:500px;
     display:block;
@@ -165,7 +165,7 @@ comment {
     min-height:50px;
 }
 
-comment avatar img {
+.comment avatar img {
     position:absolute;
     top:0px;
     left:0px;
@@ -173,19 +173,19 @@ comment avatar img {
     height:48px;
 }
 
-comment info {
+.comment info {
     position:relative;
     left:60px;
     font-size:14px;
     color:#999;
 }
 
-comment info a.reply {
+.comment info a.reply {
     text-decoration:underline;
     padding-left:5px;
 }
 
-comment pre {
+.comment pre {
     width:50em;
     position:relative;
     left:60px;
@@ -205,7 +205,7 @@ note {
     font-size:14px;
 }
 
-comment.deleted {
+.comment.deleted {
     color: #999;
 }
 
