--- a/public/css/style.css
+++ b/public/css/style.css
@@ -292,3 +292,65 @@ topcomment {
     left:-5px;
     opacity:0.7
 }
+
+.keyboard-help-banner {
+    left: 5%;
+    top: 5%;
+    width: 90%;
+    height: 10em;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 1em;
+    position: absolute;
+    text-align: center;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.banner-foreground {
+    text-shadow: 1px 1px 7px #000000;
+    z-index: 1002;
+}
+
+.banner-background {
+    background: none repeat scroll 0 0 #000000;
+    border-radius: 10px 10px 10px 10px;
+    opacity: 0.8;
+    overflow: auto;
+    z-index: 1001;
+}
+
+.banner .primary-message, .banner .secondary-message {
+    font-family: sans-serif;
+    font-weight: bold;
+    margin: 0;
+}
+
+.banner .primary-message {
+    font-size: 200%;
+}
+
+.banner .secondary-message {
+    border-top: 1px solid #999999;
+    font-size: 150%;
+    padding-top: 0.5em;
+    margin: 0;
+}
+
+#keyboard-help .secondary-message div {
+    float: left;
+}
+
+#keyboard-help .key {
+    font-weight: bold;
+    padding-right: 0.25em;
+    text-align: right;
+    white-space: nowrap;
+    width: 50%;
+    clear: left;
+}
+
+#keyboard-help .desc {
+    font-weight: normal;
+    text-align: left;
+}
