--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,10 @@ h2 {
     color:#333;
 }
 
+li {
+    list-style-type: none;
+}
+
 header {
     display:block;
     position:relative;
@@ -251,7 +255,6 @@ topcomment {
 }
 
 .userinfo ul li {
-    list-style-type: none;
     margin-bottom:10px;
 }
 
@@ -291,4 +294,9 @@ topcomment {
     top:-7px;
     left:-5px;
     opacity:0.7
+}
+
+#adminlinks li {
+    list-style-type: disc;
+    margin-left:20px;
 }
