use instance variable

--- a/views/editnews.erb
+++ b/views/editnews.erb
@@ -3,7 +3,7 @@
 	<form name="f">
 		<input type='hidden' name="news_id" value='<%= @news['id'] %>' />
 		<label for ="title")>title</label>
-        <input type='text' id ="title" name ="title" size=80 value='<%= news['title'] %>' />
+        <input type='text' id ="title" name ="title" size=80 value='<%= @news['title'] %>' />
 		<br/>
 		<label for="url">url</label><br>
 		<input type='text' id="url" name ="url" size =60 value='<%= @news['url'] %>' /><br>
